--- a/app/resources/templates/user.html
+++ b/app/resources/templates/user.html
@@ -1,20 +1,20 @@
 <html lang="en">
 <body style="margin-top: 0; padding: 55px 0; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif; background-color: #efefef;">
     <div style="background-color: #7f93eb; text-align: center; font-size: 34px; margin: 8px 21px;padding: 9px; border-radius: 10px; color: white;">
-        {{body.title}}
+        PoliPerros App
     </div>
     <div style="background-color: #fff; text-align: center; font-size: 21px; margin: 8px 21px; padding: 9px; border-radius: 10px;">
         <p>
-            Este es tu código de recuperación:
+            Estas son tus credenciales de acceso:
         </p>
         <p style="border-radius: 5px; margin-bottom: 3px;">
-            {{body.code}}
+            username: {{body.username}}
         </p>
-        <p style=" margin-bottom: 50px; margin-top: 0; font-size: 13px;">
-            Este código expirará el {{body.date}}
+        <p style="border-radius: 5px; margin-bottom: 3px;">
+            password: {{body.password}}
         </p>
         <p style="border-top: 1px solid black;">
-            En caso de no haber solicitado este código, ignore este correo.
+            Recuerda cambiar tus credenciales de acceso una vez inicies sesión.
         </p>
     </div>
 </body>
